se esta consumiendo una api de climas

--- a/climas-angular/angular.json
+++ b/climas-angular/angular.json
@@ -91,6 +91,11 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              {
+                "glob": "**/*",
+                "input": "node_modules/@fortawesome/fontawesome-free/webfonts",
+                "output": "/assets/fontawesome"
+              },
               "src/favicon.ico",
               "src/assets"
             ],
